修改热部署代码