@@ -6,6 +6,7 @@ import io.github.tml.mosaic.MosaicRepository;
 import java.io.File;
 import java.io.IOException;
 import java.nio.file.Files;
+import java.nio.file.Path;
 import java.nio.file.Paths;
 
 /**
@@ -20,20 +21,32 @@ public class JSONFileAdapter implements LocalFileAdapter{
     public JSONFileAdapter() {
         // 获取项目根目录的父目录，然后拼 mosaic
         String projectDir = System.getProperty("user.dir"); // /home/user/myproject
-        File parentDir = new File(projectDir).getParentFile(); // /home/user
-        this.BASE_PATH = new File(parentDir, "mosaic").getAbsolutePath();
-        // 确保 mosaic 目录存在
-        File mosaicDir = new File(BASE_PATH);
-        if (!mosaicDir.exists()) {
-            mosaicDir.mkdirs();
+        Path mosaic = Paths.get(projectDir, "mosaic");
+        try {
+            // 创建 mosaic 文件夹（如果不存在）
+            if (!Files.exists(mosaic)) {
+                Files.createDirectories(mosaic);
+            }
+            this.BASE_PATH = mosaic.toAbsolutePath().toString();
+        } catch (IOException e) {
+            throw new RuntimeException("文件操作失败", e);
         }
     }
 
     @Override
     public void save(String filePath, Object obj) {
         try {
+            // 构造完整路径
+            Path fullPath = Paths.get(BASE_PATH + filePath);
+
+            // 检查并创建父目录
+            Path parentDir = fullPath.getParent(); // 获取父目录路径
+            if (parentDir != null && !Files.exists(parentDir)) { // 如果父目录不存在
+                Files.createDirectories(parentDir); // 创建父目录及其所有不存在的父级目录
+            }
+
             String json = JSON.toJSONString(obj, true); // true 表示格式化输出
-            Files.write(Paths.get(BASE_PATH+filePath), json.getBytes());
+            Files.write(fullPath, json.getBytes());
         } catch (IOException e) {
             throw new RuntimeException("保存到本地文件失败: " + filePath, e);
         }
@@ -41,13 +54,17 @@ public class JSONFileAdapter implements LocalFileAdapter{
 
     @Override
     public <T> T get(String filePath, Class<T> clazz) {
+        File file = new File(BASE_PATH+filePath);
+        if (!file.exists()) return null;
         try {
-            File file = new File(BASE_PATH+filePath);
-            if (!file.exists()) return null;
-            String json = new String(Files.readAllBytes(Paths.get(filePath)));
+            // 读取文件内容为字符串
+            String json = Files.readString(file.toPath());
+            // 将 JSON 字符串解析为指定类型的对象
             return JSON.parseObject(json, clazz);
         } catch (IOException e) {
-            throw new RuntimeException("读取本地文件失败: " + filePath, e);
+            throw new RuntimeException("读取文件失败: " + filePath, e);
+        } catch (Exception e) {
+            throw new RuntimeException("解析 JSON 失败: " + filePath, e);
         }
     }
 }
